# Echo_server

./: .gitignore  README.md  UDP_recieve.py  audio_API.py  audio_player.py  dashboard.py  data_process.py  database.py  div.py  main.py  pyproject.toml  test_sensor_data.json
Debug_scripts/: Hello_from_stm.py  simple-reliable-receiver.py  test_data.py
Frontend/: audio_player.py  dashboard.py
