[tool.poetry]
name = "server-test"
version = "0.1.0"
description = ""
authors = ["Hans Olav <hansolavaarvik@gmail.com>"]
readme = "README.md"
packages = [{include = "server_test", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = ">=2.2.3,<3.0.0"
uvicorn = ">=0.34.0,<0.35.0"
fastapi = ">=0.115.12,<0.116.0"
pyaudio = ">=0.2.14,<0.3.0"
dash = ">=3.0.1,<4.0.0"
dash-bootstrap-components = {version = "^2.0.0", python = ">=3.9,<4.0"}
wave = "^0.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"